# Recipe-Generator-with-Fridge-Section-Analysis

./: .gitattributes  AI_Photos_Creation.ipynb  LICENSE  README.md  Resnet_50_Train.ipynb  app.py  customyolo.py  duckduckgo.py  geminiapi.py  pyproject.toml  recipe_generator.py  requirements.txt  videoprediction.py  yoloimages.py
foodproductdetection/: appproductdetection.py  copyappdetect.py  output_video.avi  pyproject.toml  recipe_generator.py  videoprediction.py
images/: 52759758.cms_imgsize=560987&width=800&height=800  DSC_0061_edited-2.jpg_ssl=1  img_20190924_164132.jpg_fit=1200,900&ssl=1
imagevideostramlitdetection/: README.md
